feat setup complette

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
     <main>
-      <canvas id = "canvas" class="canvas"></canvas>
+      <canvas id = "canvas" width="10" height="10" class="canvas"></canvas>
     </main>
   </body>
 </html>
